--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gesture detection"
+    "## SSD MobileNet Based Blender Gestural Input Interface Demo  "
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,6 @@
     "import os\n",
     "import tensorflow as tf\n",
     "from object_detection.utils import config_util\n",
-    "from object_detection.protos import pipeline_pb2\n",
-    "from google.protobuf import text_format\n",
     "from object_detection.utils import label_map_util\n",
     "from object_detection.utils import visualization_utils as viz_utils\n",
     "from object_detection.builders import model_builder\n",
@@ -44,38 +42,7 @@
     "MODEL_PATH = WORKSPACE_PATH+'/trained-models'\n",
     "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-model'\n",
     "CONFIG_PATH = MODEL_PATH+'/custom_trained_model/pipeline.config'\n",
-    "CHECKPOINT_PATH = MODEL_PATH+'/custom_trained_model/'\n",
-    "actionMap = {\n",
-    "    \"SelectPrevious\" : (\"LeftL\", \"RIndexUp\"),\n",
-    "    \"SelectNext\" : (\"LeftL\", \"RIndexDown\"),\n",
-    "    \"SelectChild\" : (\"LeftL\", \"RIndexRight\"),\n",
-    "    \"SelectParent\" : (\"LeftL\", \"RIndexLeft\"),\n",
-    "\n",
-    "    \"MoveZPositive\" : (\"LeftA\", \"RIndexUp\"),\n",
-    "    \"MoveZNegative\" : (\"LeftA\", \"RIndexDown\"),\n",
-    "    \"MoveXPositive\" : (\"LeftA\", \"RIndexRight\"),\n",
-    "    \"MoveXNegative\" : (\"LeftA\", \"RIndexLeft\"),\n",
-    "    \"MoveYPositive\" : (\"LeftA\", \"RIndexFront\"),\n",
-    "    \"MoveYNegative\" : (\"LeftA\", \"RThumbBack\"),\n",
-    "    \"MoveClear\" : (\"LeftA\", \"RClearC\"),\n",
-    "\n",
-    "    \"RotateZPositive\" : (\"LeftO\", \"RIndexUp\"),\n",
-    "    \"RotateZNegative\" : (\"LeftO\", \"RIndexDown\"),\n",
-    "    \"RotateXPositive\" : (\"LeftO\", \"RIndexRight\"),\n",
-    "    \"RotateXNegative\" : (\"LeftO\", \"RIndexLeft\"),\n",
-    "    \"RotateYPositive\" : (\"LeftO\", \"RIndexFront\"),\n",
-    "    \"RotateYNegative\" : (\"LeftO\", \"RThumbBack\"),\n",
-    "    \"RotateClear\" : (\"LeftO\", \"RClearC\"),\n",
-    "\n",
-    "    \"TransformGlobal\" : (\"LeftV\", \"RIndexUp\"),\n",
-    "    \"TransformLocal\" : (\"LeftV\", \"RIndexDown\"),\n",
-    "    \"ViewNext\" : (\"LeftV\", \"RIndexRight\"),\n",
-    "    \"ViewPrevious\" : (\"LeftV\", \"RIndexLeft\"),\n",
-    "\n",
-    "    \"HideCurrent\" : (\"LeftOpenHand\", \"RIndexRight\"),\n",
-    "    \"UnhideCurrent\" : (\"LeftOpenHand\", \"RIndexLeft\"),\n",
-    "    \"UnhideAll\" : (\"LeftOpenHand\", \"RIndexUp\"),\n",
-    "             }"
+    "CHECKPOINT_PATH = MODEL_PATH+'/custom_trained_model/'"
    ]
   },
   {
@@ -87,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +103,6 @@
     "import sys\n",
     "import cv2 \n",
     "import numpy as np\n",
-    "from IPython.display import clear_output\n",
     "import tkinter as tk\n",
     "import ast\n",
     "import matplotlib\n",
@@ -147,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -231,9 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You pressed q, the program exited\n"
+     ]
+    }
+   ],
    "source": [
     "# Camera loop\n",
     "while cap.isOpened(): \n",
@@ -316,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
